--- a/corporate-social-network/src/global.css
+++ b/corporate-social-network/src/global.css
@@ -1,14 +1,14 @@
 :root {
   --white: #fff;
-  --gray-100: #e1e1e6
-  --gray-300: #c4c4cc
-  --gray-400: #8d8d99
-  --gray-600: #323238
-  --gray-700: #29292e
-  --gray-800: #202024
-  --gray-900: #121214
+  --gray-100: #e1e1e6;
+  --gray-300: #c4c4cc;
+  --gray-400: #8d8d99;
+  --gray-600: #323238;
+  --gray-700: #29292e;
+  --gray-800: #202024;
+  --gray-900: #121214;
 
-  --blue-500 #00BDFE
+  --blue-500 #00BDFE;
 }
 
 
