--- a/corporate-social-network/src/components/Sidebar.module.css
+++ b/corporate-social-network/src/components/Sidebar.module.css
@@ -14,6 +14,27 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: calc(0px - 1.5rem - 6px)
+}
+
+.profile strong {
+  margin-top: 1.5rem;
+  color: var(--gray-100);
+  line-height: 1.6;
+}
+
+.profile span {
+  font-size: 0.875rem;
+  color : var(--gray-400);
+  line-height: 1.6;
+}
+
+.avatar {
+  weight: calc(3rem + 12px);
+  height: calc(3rem + 12px);
+  border-radius: 8px;
+  border: 4px solid  var(--gray-800);
+  outline: 2px solid var(--blue-500);
 }
 
 .sidebar footer {
@@ -28,11 +49,17 @@
   border: 1px solid var(--blue-500);
   border-radius: 8px;
   height: 50px;
-  padding: 0 1.5rem;
+  padding: 0 1rem;
   font-weight: bold;
   display: flex;
   text-decoration: none;
   align-items: center;
   justify-content: center; 
+  gap: 0.5rem;
+  transition: color 0.2s, background-color 0.2s
 }
   
+.sidebar footer a:hover {
+  background: var(--blue-500);
+  color: var(--white);
+}
