--- a/corporate-social-network/src/global.css
+++ b/corporate-social-network/src/global.css
@@ -9,10 +9,15 @@
   --gray-900: #121214;
 
   --blue-300: #00fafe;
+  --blue-400: #23c7ff;
   --blue-500: #00BDFE;
   
 }
 
+:focus {
+  outline: transparent;
+  box-shadow: 0 0 0 2px var(--blue-500);
+}
 
 * {
   margin: 0;
