--- a/corporate-social-network/src/components/Post.module.css
+++ b/corporate-social-network/src/components/Post.module.css
@@ -29,13 +29,13 @@
 }
 
 
-.post header {
+.post > header {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.post header time { 
+.post header > time { 
   font-size: 0.875rem;
   color: var(--gray-400)
 }
@@ -112,7 +112,6 @@
   cursor: pointer;
   transition: background-color 0.2s; 
   border: 1px solid var(--blue-500);
-
 }
 
 .commentForm button[type="submit"]:hover {
