--- a/corporate-social-network/src/components/Post.module.css
+++ b/corporate-social-network/src/components/Post.module.css
@@ -106,9 +106,14 @@
   border: 1px solid var(--blue-500);
 }
 
-.commentForm button[type="submit"]:hover {
+.commentForm button[type="submit"]:not(:disabled):hover {
   background: var(--gray-500);
   color: var(--blue-500);
+}
+
+.commentForm button[type="submit"]:disabled {
+  opacity: 0.5;
+  cursor: not-allowed
 }
 
 .commentList {
